--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "ahooks": "^3.7.8",
     "axios": "^1.5.1",
+    "clsx": "^2.0.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.11.2",
     "react": "^18.2.0",
